# SignUpFlow

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_QUICKSTART.md  API_TEST_RESULTS.md  CLAUDE.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  CRITICAL_BUGS_FOUND.md  DELIVERY_SUMMARY.md  DEV_RUNTIME_AND_TESTING.md  DOCKER_QUICK_START.md  DOCKER_SETUP_RESULTS.md  DOCKER_TEST_CHECKLIST.md  Dockerfile  Dockerfile.dev  E2E_TEST_FULL_RESULTS.md  E2E_TEST_RESULTS.md  FINAL_REPORT.md  FINAL_TEST_REPORT.md  FRENCH_LOCALE_COMPLETION.md  GEMINI.md  I18N_COMPLETION_GUIDE.md  IMPLEMENTATION_PLAN.md  INDEX.md  LICENSE  Makefile  NEXT_STEPS.md  PLAYWRIGHT_SETUP.md  PRODUCTION_READY.md  PROMPT_build.md  PROMPT_plan.md  PYTHON_VERSION_FIX.md  QUICK_DEMO.sh  README.md  README_TESTING.md  RELEASE_NOTES.md  SAMPLE_ROSTER_OUTPUT.md  START_HERE.md  (+59 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codex-review.yml  e2e.yml  mobile-ci.yml  pages.yml
.serena/: project.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  feature-progress-template.md  project-progress-template.md
alembic/: env.py
alembic/versions/: 672673a205b0_add_sms_notification_tables.py  739ba7ba574c_add_solution_publish_columns.py  7ba388eecd31_add_assignment_status_real.py  a3c5d7e9b1f2_add_refresh_token_version_to_person.py  b4e6f8a2c5d3_add_password_reset_tokens_table.py  b539edce3e6c_add_timezone_to_person.py  cf7914ee40c0_add_password_changed_at_to_person.py  f18c6691c7ab_initial.py
api/: __init__.py  celery_app.py  database.py  dependencies.py  logging_config.py  main.py  models.py  security.py  timeutils.py
api/cli/: __init__.py  main.py
api/core/: config.py  csv_writer.py  diffing.py  ics_writer.py  json_writer.py  loader.py  publish_state.py  schema_validators.py  timeutils.py
api/models/: audit_log.py
api/routers/: analytics.py  assignments.py  audit.py  auth.py  availability.py  billing.py  calendar.py  conflicts.py  constraints.py  events.py  holidays.py  invitations.py  notifications.py  onboarding.py  organizations.py  password_reset.py  people.py  recurring_events.py  resources.py  sms.py  solutions.py  solver.py  teams.py  webhooks.py
api/schemas/: _serializers.py  assignment.py  audit.py  availability.py  billing.py  common.py  conflicts.py  constraint.py  event.py  holiday.py  invitation.py  notifications.py  organization.py  person.py  resource.py  solver.py  team.py
api/services/: billing_service.py  email_service.py  event_bus.py  notification_service.py  onboarding_service.py  recurrence_generator.py  sample_data_generator.py  sms_service.py  stripe_service.py  usage_service.py  (+1 more)
claudedocs/: CODE_QUALITY_ANALYSIS_2025-01-03.md  E2E_GUI_TEST_COVERAGE_REPORT.md  E2E_TEST_COVERAGE_ANALYSIS.md  E2E_TEST_RESULTS_2025-01-03.md  FEATURE_ROADMAP_ANALYSIS.md  MAKEFILE_AND_DEPRECATION_CLEANUP_2025-01-03.md  PRIORITY_1_COMPLETION_REPORT.md  PROJECT_ANALYSIS_2025-01-03.md  SELF_HEALING_REPORT.md  SESSION_SUMMARY_2025-01-03.md  research_payment_systems_2025-10-22.md  spec-kit-progress.md
config/: env.dev.yaml  env.prod.yaml  env.test.yaml
docs/: ADMIN_CONSOLE_IMPLEMENTATION_REPORT.md  ADMIN_TABS_STRUCTURE.md  API.md  API_README.md  BACKEND_DEBUG.md  BILLING_SETUP.md  BILLING_USER_GUIDE.md  COMPREHENSIVE_TEST_SUITE.md  DATETIME_ARCHITECTURE.md  DEBUG_REFACTORING.md  DEPLOYMENT_GUIDE.md  DOCKER_DEVELOPMENT.md  E2E_TESTING.md  E2E_TESTING_CHECKLIST.md  E2E_TESTS_FIXED_SUMMARY.md  E2E_TEST_BASELINE_2025-10-27.md  E2E_TEST_GAP_ANALYSIS.md  E2E_TEST_IMPLEMENTATION_COMPLETE.md  ENVIRONMENT_SETUP.md  EVENT_ROLES_FEATURE.md  FEATURE_019_SMS_IMPLEMENTATION_PROGRESS.md  FINAL_STATUS.md  GAPS_ANALYSIS.md  GAP_ANALYSIS_SUMMARY_2025-10-17.md  I18N_ANALYSIS.md  I18N_IMPLEMENTATION_STATUS.md  I18N_QUICK_START.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LAUNCH_ROADMAP.md  LOCAL_EMAIL_SETUP.md  MAILTRAP_API_TESTING.md  MANUAL_VALIDATION_GUIDE.md  MULTI_ORG_LIMITATIONS.md  NEXT_STEPS.md  ONBOARDING_SYSTEM_COMPLETE.md  QUICK_START.md  QUICK_WIN_E2E_ANALYSIS.md  (+32 more)
examples/: README.md  api_client_example.py  api_example.py  api_usage_example.py  church_volunteer_example.py  cricket_basic_example.py  cricket_custom_example.py
frontend/: README.md  clear-cache.html  force-refresh.html  index-admin.html  index.html  test-org-creation.html  test.html
migrations/: add_language_to_person.py  add_recurring_events_schema.py
mobile/: .gitignore  ANDROID_RELEASE.md  Gemfile  README.md  SMOKE.md  TESTFLIGHT.md  analysis_options.yaml  pubspec.yaml
roster_cli/: __init__.py  main.py
scripts/: backup_database.sh  build-binary.sh  check_e2e_coverage.sh  check_gui_state.py  check_test_docstrings.py  check_test_status.sh  cleanup_and_test.sh  cleanup_maintenance.sh  cleanup_servers.sh  collect_test_logs.sh  email_smoke.py  migrate_add_role_to_assignments.py  migrate_assignments.py  migrate_invitations.py  migrate_timezone.py  migrate_vacation_reason.py  prepare_for_screenshots.sh  ralph-loop-gemini.sh  restore_database.sh  run_all_tests.sh  run_with_server.sh  seed_sms_templates.py  take_feature_screenshots.sh  take_screenshots.py  test_docker_setup.sh  validate_email_system.sh
site/: index.html  styles.css
test-reports/: report.html
tests/: comprehensive_test_suite.py  conftest.py  mock_smtp_server.py  setup_e2e_test_data.py  setup_test_data.py  test_admin_solver_gui.py  test_availability_crud.py  test_complete_e2e.py  test_gui_automated.py  test_gui_comprehensive.py  test_gui_i18n_implementation.py  test_gui_manual.md  test_gui_selectors.py  test_i18n_integration.py  test_phase3_features.py  test_sarah_calendar.py  test_schedule_generation.py  test_test_data_setup.py  test_view_button_click.py  test_view_button_click_working.py  test_view_button_final.py  test_view_button_visibility.py  test_view_schedule.py  test_view_simple.py
tools/: db_interactive.py
web/: __init__.py  app.py  auth.py  deps.py
(+1256 files in other folders)
