[tool.poetry]
name = "roster-api"
version = "0.2.0"
description = "Microservice API for constraint-based roster scheduling (cricket, church, on-call)"
authors = ["Roster Team"]
readme = "README.md"
packages = [{include = "roster_cli"}, {include = "api"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
pyyaml = "^6.0.1"
ics = "^0.7.2"
python-dateutil = "^2.8.2"
sqlalchemy = "^2.0.43"
python-multipart = "^0.0.6"
httpx = "^0.26.0"
alembic = "^1.16.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.3"
ruff = "^0.1.7"
black = "^23.12.0"
mypy = "^1.7.1"
types-pyyaml = "^6.0.12"
types-python-dateutil = "^2.8.19"
playwright = "^1.55.0"
pytest-playwright = "^0.7.1"
pytest-html = "^4.1.1"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.8.0"
allure-pytest = "^2.15.0"

[tool.poetry.scripts]
roster-api = "api.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "ics.*"
ignore_missing_imports = true
